objects/ISO_Country__c.object
<CustomObject>
    <fields>
        <fullName>ABB_HRC_restriction__c</fullName>
        <description>R8 - Customer Management</description>
        <inlineHelpText>ABB has recognized that certain procedures are required when doing business with counterparties in certain high risk countries. ABB entities should only transact in High Risk Countries with counterparties who are approved (GD/LI-50).</inlineHelpText>
        <label>High Risk Country</label>
        <picklist>
            <picklistValues>
                <fullName>GD/LI-50</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_SCP_Classification__c</fullName>
        <description>R8 - Customer Management</description>
        <inlineHelpText>Classification of the country related to ABB&apos;s exposure/risk in doing business from a financial, legal, security and reputation standpoint. Possible values: WATCH, ACT, DECLINE.  See Sensitive Country Protocol (GD/LI-30) link below.</inlineHelpText>
        <label>Country Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WATCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DECLINE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_sanctions_AGB_exclusion__c</fullName>
        <description>R8 - Customer Management</description>
        <inlineHelpText>Swiss sanctions (UN / EU sanctions) excluded from SECO AGB</inlineHelpText>
        <label>Swiss sanctions</label>
        <picklist>
            <picklistValues>
                <fullName>arms (1483)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1533)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1591)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1701)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1718)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1737)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1844)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1907)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (1970)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>finance (2048)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (2127)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (2140)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>arms (EU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>finance (2206)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>finance (EU)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeDate__c</fullName>
        <description>StS R8 field from CnV: change date of the restrictions</description>
        <inlineHelpText>Date of restriction change</inlineHelpText>
        <label>ChangeDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <globalPicklist>Country_ISO_Code</globalPicklist>
        <label>Country ISO Code</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country Name</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <globalPicklist>Currency</globalPicklist>
        <label>Currency Code</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Comment field introduced in StS Release 8 for Sensitive Country integration with C&amp;V</description>
        <inlineHelpText>Sensitive country comment</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISO_Code_External__c</fullName>
        <externalId>true</externalId>
        <label>ISO Code External</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <globalPicklist>Region_Code</globalPicklist>
        <label>Region Code</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <globalPicklist>Region_Name</globalPicklist>
        <label>Region Name</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restrictions_On_Person_Involvement__c</fullName>
        <description>Text field introduced in StS Release 8 for Sensitive Country integration with C&amp;V</description>
        <inlineHelpText>ABB countries that prohibit or restrict the involvement of their persons doing business in/with a sensitive country. See Sensitive Country Protocol (GD/LI-30) link.</inlineHelpText>
        <label>Restrictions On Person Involvement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Plan__c</fullName>
        <description>Picklist field introduced in StS Release 8 for Sensitive Country integration with C&amp;V</description>
        <inlineHelpText>Identifies if a written security risk assessment for every project prior to tendering and/or a security plan must be approved by Security prior to execution. See Sensitive Country Protocol (GD/LI-30) link.</inlineHelpText>
        <label>Is Security Plan/Assessment required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sending_Personnel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field introduced in StS Release 8 for Sensitive Country integration with C&amp;V</description>
        <inlineHelpText>Identifies if sending of personnel is allowed. See Sensitive Country Protocol (GD/LI-30) link.</inlineHelpText>
        <label>Is Sending of Personnel allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_EAR_Country_Group__c</fullName>
        <description>R8 - Customer Management</description>
        <inlineHelpText>US Export Administration Regulations</inlineHelpText>
        <label>Export Administration Regulations (US)</label>
        <picklist>
            <picklistValues>
                <fullName>E:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E:2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_EAR_Note__c</fullName>
        <description>R8 - Customer Management</description>
        <label>US EAR Note</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ISO Country</label>
    <listViews>
        <fullName>Allrecords</fullName>
        <columns>NAME</columns>
        <columns>Country_ISO_Code__c</columns>
        <columns>Country__c</columns>
        <columns>ABB_SCP_Classification__c</columns>
        <columns>Description__c</columns>
        <columns>ISO_Code_External__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ISO Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISO Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>